--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 <body>
     <div class= "image">
         <p> Homepage </p>
-        <img src = "Homepage- Fran 1.png">
+        <img src = "1x optimized/Homepage- Fran 1.png">
         <p> Our Story </p>
-        <img src = "Our Story.png">
+        <img src = "1x optimized/Our Story.png">
         <p> Services</p>
-        <img src = "Services.png">
+        <img src = "1x optimized/Services.png">
         <p>Children Services</p>
-        <img src = "Children In Depth.png">
+        <img src = "1x optimized/Children In Depth.png">
         <p>Get Involved</p>
-        <img src = "Get Involved - Christine.png">
+        <img src = "1x/Get Involved - Christine.png">
         <p>By the Numbers</p>
-        <img src = "By the Numbers.png">
+        <img src = "1x optimized/By the Numbers.png">
     </div>
 </body>
 
