optimized and underlined

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Children Services</p>
         <img src = "1x optimized/Children In Depth.png">
         <p>Get Involved</p>
-        <img src = "1x/Get Involved - Christine.png">
+        <img src = "1x optimized/Get Involved - Christine optimized.png">
         <p>By the Numbers</p>
         <img src = "1x optimized/By the Numbers.png">
     </div>
